--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vpcs (0.8.2-1kaisen1) kaisen-packages; urgency=medium
+
+  * Update at 0.8.2
+
+ -- Kevin Chevreuil - Kaisen <kaisen@kaisenlinux.org>  Mon, 06 Dec 2020 22:06:04 +0200
+
 vpcs (0.8.1-1kaisen1) kaisen-packages; urgency=medium
 
   * Update at 0.8.1
